# p-bus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh
cmake/: IDLCompiler.cmake  PbusBuildService.cmake
src/client/: client.cpp
src/idl/: Disposable.idl  Object.idl  RandomGenerator.idl  RegisterAll.h.in  Service.idl  ServiceLease.idl  ServiceManager.idl
src/idl/core/: Disposable.idl  Object.idl
src/idl/system/: RandomGenerator.idl  Service.idl  ServiceLease.idl  ServiceManager.idl
src/init/: main.cpp
src/init/pbus/servicemanager/: Service.cpp  Service.h  ServiceDescriptor.h  ServiceRegistry.cpp  ServiceRegistry.h
src/lib/: CMakeLists.txt
src/lib/pbus/: Application.cpp  Application.h  ClassId.cpp  ClassId.h  ComponentFactory.h  LocalBus.cpp  LocalBus.h  LocalBusConnection.cpp  LocalBusConnection.h  MethodDescriptor.h  MethodId.h  ObjectId.cpp  ObjectId.h  ResponseParser.h  Service.cpp  Service.h  ServiceId.h  ServiceRegistry.cpp  ServiceRegistry.h  Session.cpp  Session.h  String.h
src/lib/pbus/idl/: CoreObject.h  CoreObjectRemote.h  CoreRemoteObject.h  ICoreObject.cpp  ICoreObject.h  ICoreRemoteObject.h  types.h
src/lib/pbus/idl/core/: CoreObject.cpp  CoreObject.h  ICoreObject.cpp  ICoreObject.h
src/services/system/randomgenerator/: main.cpp
src/services/system/servicemanager/: Service.cpp  Service.h  ServiceConfig.cpp  ServiceConfig.h  ServiceDescriptor.h  ServiceManager.cpp  ServiceManager.h  ServiceRegistry.cpp  ServiceRegistry.h  main.cpp
tools/: scan-deps
tools/idl/: idlc  requirements.txt
tools/idl/idl/: __init__.py  grammar.py
tools/idl/idl/lang/: cpp.py
tools/idl/idl/lang/cpp/: __init__.py  interface.cpp  interface.h  remote.cpp  remote.h  template.cpp  template.h
